@@ -1,4 +1,7 @@
 
+Development version (next version)
+- Fixed bug where an output buffer could not be used as input at the same time
+
 Version 2.3.0
 - Added support for 'short' and 'cl_half' data-types as kernel buffer and scalar arguments
 - Fixed a bug where failed results would still show up in the tuning results
